--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "riddim-records",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Riddim Records - A Cardiff-based label founded on all things drum and bass",
   "version": "0.1.0",
   "author": "Alex Harvey <aharvey7nr7@gmail.com>",
   "dependencies": {
