--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -7,6 +7,7 @@
     "released": true,
     "info": ["Heavy hitting duo ATYK make their Riddim Records debut with the first of a two part EP, 'Sensō'.", "The energetic sounds of 'Triple Homicide' and 'Nerve Damage' provide the perfect combination of driving basslines with tireless drums leaving you thirsty for more."],
     "pic": "../images/releases/rr004Cover.jpg",
+    "soundcloud": "<iframe title='RR004' width='100%' height='300' scrolling='no' frameborder='no' allow='autoplay' src='https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/739326534&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true'></iframe>",
     "fanlink": "https://fanlink.to/RR004"
   },
   {
